# Brokerflow_ai

./: .env.example  .gitignore  Makefile  README.md  evaluation.md  nb.md  pyproject.toml  requirements.txt  unzip.py
data/: agent_eval_cases.json
data/processed/: history_features.csv  test_enriched.csv  (+3 more)
docs/: TEMPLATE_NEXT_PROJECT.md  agent_eval_results.md  agent_evaluation_strategy.md  agents_messages_tools_architecture.md  agents_strategy_ollama_smolagents.md  architecture.md  data_dictionary.md  demo_script.md  gradio_testing_guide.md  model_card.md  origine_notes_textuelles.md  raw_dataset_integration.md  session_refactoring_notes.md
models/: agent_eval_phase5_results.json  best_threshold.txt  challenger_metrics.csv  challenger_winner.json  feature_selection_report.csv  logreg_raw_runtime_manifest.json  model_coefficients.csv  raw_baselines_metrics.csv  selected_features.csv
notebooks/: 01_zindi_schema_study.ipynb  02_synthetic_data_generation.ipynb  03_eda_credit_risk.ipynb  04_feature_engineering.ipynb  05_model_baselines.ipynb  06_calibration_explainability.ipynb  07_agent_evaluation.ipynb  08_demo_cases.ipynb  09_champion_challenger_comparison.ipynb  10_broker_live_test.ipynb
src/: __init__.py
tests/: conftest.py  test_api.py  test_api_scoring_real.py  test_consistency_checks.py  test_evaluate_agents.py  test_features.py  test_note_parser.py  test_ollama_client.py  test_predict.py  test_raw_competition.py  test_raw_runtime_loader.py  test_reviewer.py  test_rules.py  test_rules_v2.py  test_schema_validator.py  test_summary_writer.py  test_validation.py
(+67 files in other folders)
