[project]
name = "brokerflow-ai"
version = "0.1.0"
description = "Underwriting copilot with synthetic data, ML pipeline, agents and API"
requires-python = ">=3.8"
readme = "README.md"

[project.optional-dependencies]
test = ["pytest"]
dev = ["black>=24.0.0", "ruff>=0.6.0"]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"